# ThunderzAssistant

./: .gitignore  CHANGELOG.md  CHANGELOG_UPDATE_SUMMARY.md  CONTRIBUTING.md  DARK_THEME_UPDATE.md  DEVELOPER_GUIDE.md  DISCORD_COMPLETE_INTEGRATION.md  DISCORD_ENHANCED_INTEGRATION.md  DISCORD_IMPLEMENTATION.md  DISCORD_VISUAL_GUIDE.md  GIT_CHEAT_SHEET.md  NOTIFICATION_CENTER_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  STOCK_MONITOR_ENHANCEMENT.md  Thunderz Assistant.spec  WHATS_NEXT.md  check_git.bat  check_security.bat  commit_v1.5.0.bat  config.example.py  config.py  dashboard_tasks.json  fix_config.bat  main.py  notifications.json  pyproject.toml  requirements.txt  setup.bat  smart_build_exe.py  stock_watchlist.json
.github/workflows/: build.yml  lint.yml
data/: dashboard_config.json  dashboard_tasks.json  notes.json  pomodoro_stats.json  stock_watchlist.json
data.example/: dashboard_config.json  dashboard_tasks.json  pomodoro_stats.json  stock_watchlist.json
docs/: BACKUP_STRATEGY.md  BUG_FIXES_V1.3.1.md  CODE_REVIEW.md  FILE_ORGANIZER_GUIDE.md  FILE_ORGANIZER_SAFETY.md  GLIZZY_SETUP.md  NEW_FEATURES_V1.3.md  PHASE_1_ENHANCED_POMODORO.md  PLANNED_FEATURES.md  QUICKSTART.md  README.md  UI_ENHANCEMENT_GUIDE.md  UI_ENHANCEMENT_SUMMARY.md  V1.6.0_UPDATE_SUMMARY.md
docs/development/: 10.0.1 Dev_Plan.md  DEVELOPER_GUIDE.md
docs/guides/: modules.md
docs/guides/discord/: QUICK_START.md  SETUP.md  USAGE_GUIDE.md  WEBHOOK_SETUP.md
docs/guides/notification-center/: GUIDE.md
docs/guides/stock-monitor/: GUIDE.md
docs/planning/: PHASE_1_COMPLETE.md  imperative-spinning-jellyfish.md
docs/setup/: QUICK_SECURITY_SETUP.md  SYSTEM_TRAY_SETUP.md
docs/versions/: BUG_FIXES_V1.3.1.md  FIXES_V1.3.2.md  FOLDER_CLEANUP.md  SYSTEM_TRAY_SUMMARY.md  V1.10.0_RELEASE_NOTES.md  VERSION_1.4.1_UPDATE.md
modules/: LabOverview_module.py  Lab_planner_module.py  Youtube_Downloader_module.py  __init__.py  claw_jokes_module.py  clipboard_module.py  dashboard_module.py  discord_integration_module.py  discord_presence_module.py  discord_webhook_module.py  file_organizer_module.py  glizzy_module.py  news_module.py  notes_module.py  notification_center_module.py  notification_manager.py  pomodoro_module.py  stock_monitor_module.py  system_monitor_module.py  template_module.py  tray_manager.py  weather_module.py
modules/ff14/: __init__.py  crafting_tab.py  db_cache.py  ff14_module.py  gear_tab.py  loot_tab.py  marketboard_tab.py  settings_tab.py  static_tab.py  xivapi_client.py
tests/: results.txt  spotify_debug_output.txt  test_by_process.py  test_enhanced_pomodoro.py  test_notifications.py  test_results.txt  test_song_detection.py
tests/debug/: debug_icon.py  debug_spotify.py  test_media_session.py  test_song_detection_v2.py  test_windows.py
utils/: database_manager.py  health_service.py  ssh_service.py
