[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderz-assistant"
version = "1.6.0"
description = "A modular, productivity-focused GUI application built with Python. Your Swiss Army knife for daily tasks, system monitoring, and workflow optimization!"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Thunderz96", email = ""}
]
keywords = [
    "productivity",
    "gui",
    "dashboard",
    "system-monitor",
    "pomodoro",
    "weather",
    "discord",
    "stock-monitor"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

# Core dependencies (always required)
dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
# GPU monitoring for NVIDIA graphics cards
gpu = [
    "nvidia-ml-py>=12.560.30",
]

# Stock market monitoring and visualization
stocks = [
    "yfinance>=0.2.28",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

# Windows-specific features (Spotify detection)
windows = [
    "pywin32>=305; sys_platform == 'win32'",
]

# Video playback (Glizzy module)
video = [
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
]

# Discord integration
discord = [
    "pypresence>=4.3.0",
]

# System tray support
tray = [
    "pystray>=0.19.5",
    "Pillow>=10.0.0",  # Also used by video feature
]

# All optional features combined
all = [
    "nvidia-ml-py>=12.560.30",
    "yfinance>=0.2.28",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pywin32>=305; sys_platform == 'win32'",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pypresence>=4.3.0",
    "pystray>=0.19.5",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
thunderz-assistant = "main:main"

[project.urls]
Homepage = "https://github.com/Thunderz96/thunderz-assistant"
Documentation = "https://github.com/Thunderz96/thunderz-assistant/tree/main/docs"
Repository = "https://github.com/Thunderz96/thunderz-assistant"
Changelog = "https://github.com/Thunderz96/thunderz-assistant/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["modules"]

[tool.setuptools.package-data]
"*" = ["*.ico", "*.png", "*.json"]

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
  | node_modules
)/
'''

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=modules",
    "--cov-report=html",
    "--cov-report=term-missing",
]

# MyPy type checker configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["modules"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/debug/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
